--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -4,7 +4,7 @@ body{
   align-items: flex-start;
   margin:0px;
   width: 100%;
-  background-color: #121212;
+  background-color: #1f1f1f;
 }
 
 #root{
