--- a/portfolio/src/project-section/project-section.css
+++ b/portfolio/src/project-section/project-section.css
@@ -7,10 +7,9 @@
     height: auto;
     margin-top:5vh;
     margin-bottom:5vh;
+    position:relative;
+    overflow:hidden;
 }
-
-
-
 
 /* Estilos para dispositivos móviles (ancho máximo de 768px) */
 @media (max-width: 768px){
@@ -19,12 +18,23 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 95%;
+        width: 85%;
         height: 10vh;
         font-size: 2rem;
         color:white;
+        border-bottom: 2px solid rgb(255, 81, 0);
     }
    
+    .orangeborder{
+        position:absolute;
+        display: flex;
+        transform: rotate(35deg);
+        background-color: orange;
+        left:30%;
+        top:20%;
+        width: 150%;
+        height: 50px;
+    }
     
 }
     
@@ -35,12 +45,23 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        width: 95%;
+        width: 25%;
         height: 10vh;
         font-size: 2rem;
         color:white;
+        border-bottom: 2px solid rgb(255, 81, 0);
     }
     
+    .orangeborder{
+        position:absolute;
+        display: flex;
+        transform: rotate(35deg);
+        background-color: orange;
+        left:55%;
+        top:25%;
+        width: 100%;
+        height: 50px;
+    }
     
 }
 
@@ -51,10 +72,21 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        width: 95%;
+        width: 20%;
         height: 10vh;
         font-size: 2rem;
         color:white;
+        border-bottom: 2px solid rgb(255, 81, 0);
     }
 
+    .orangeborder{
+        position:absolute;
+        display: flex;
+        transform: rotate(35deg);
+        background-color: orange;
+        left:55%;
+        top:25%;
+        width: 100%;
+        height: 50px;
+    }
 }
