--- a/portfolio/src/navBar/navBar.css
+++ b/portfolio/src/navBar/navBar.css
@@ -90,7 +90,7 @@
      .navBar-menu-a{
          display: flex;
          align-items: center;
-         justify-content: flex-end;
+         justify-content: center;
          text-decoration: none;
          font-size: 0.9rem;
          font-weight: bolder;
@@ -123,7 +123,7 @@
     .navBar-menu-a{
         display: flex;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
         text-decoration: none;
         font-size: 1rem;
         font-weight: bolder;
