--- a/portfolio/src/aboutMe-section/aboutMeSection.css
+++ b/portfolio/src/aboutMe-section/aboutMeSection.css
@@ -48,6 +48,7 @@
         font-size: 1.3rem;
         color:white;
         padding-top: 2vh;
+        text-align: justify;
     }
     
     .about-me-imgContainer{
@@ -90,6 +91,7 @@
         height: auto;
         font-size: 1.3rem;
         color:white;
+        text-align: justify;
     }
     
     .about-me-imgContainer{
@@ -132,6 +134,7 @@
         height: auto;
         font-size: 1.3rem;
         color:white;
+        text-align: justify;
     }
     
     .about-me-imgContainer{
