--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -8,7 +8,7 @@ body{
   align-items: flex-start;
   margin:0px;
   width: 100%;
-  background-color: #1f1f1f;
+  background-color: rgb(253, 253, 253)
 }
 
 #root{
@@ -18,7 +18,7 @@ body{
   align-items: center;
   margin:0px;
   width: 100%;
-  
+  font-family: Arial, sans-serif;
 }
 
 .margin-flexbox{
