--- a/portfolio/src/components/header-simple/header.css
+++ b/portfolio/src/components/header-simple/header.css
@@ -1,6 +1,6 @@
 .header{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 95%;
     height: 15vh;
@@ -10,8 +10,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 55%;
-    background: linear-gradient(45deg, #d9ff00, #ff6600, #ff0000); /* Degradado de colores */
+    width: auto;
+    max-width: 30%;
+    background: #FF6362; /* Degradado de colores */
     background-clip: text; /* Aplicar el degradado al texto */
     -webkit-background-clip: text; /* Para navegadores basados en WebKit */
     color:transparent;
