--- a/portfolio/src/pages/portfolio-intro/portfolio-intro.css
+++ b/portfolio/src/pages/portfolio-intro/portfolio-intro.css
@@ -7,25 +7,31 @@
     height: auto;
 }
 
-.intro-content{
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    width: 95%;
-    height: auto;
-    margin-top:10vh;
-    margin-bottom: 5vh;
+@keyframes containerImg-animation {
+    0% {border-radius:43% 57% 70% 30% / 46% 68% 32% 54%   ;}
+    50% {border-radius:56% 44% 40% 60% / 81% 31% 69% 19%   ;}
+    100% {border-radius:43% 57% 70% 30% / 46% 68% 32% 54%   ;}
 }
 
-
-.intro-containerImg{
+.intro-containerImg,.intro-containerImg-dark{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;  
+}
+
+.intro-containerImg{
     width: 35vw;
     height: 35vw;
-    border-radius:23% 77% 17% 83% / 86% 30% 70% 14%;
     background-color: #FF6362;
+    animation: containerImg-animation 10s linear infinite
+}
+
+.intro-containerImg-dark{
+    width: 36vw;
+    height: 36vw;
+    background-color: #c94141;
+    animation: containerImg-animation 10s reverse infinite;
+    margin:5vh;
 }
 
 .intro-img{
@@ -38,20 +44,24 @@
     border-radius: 100%;
 }
 
-.intro-information{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 35%;
-    height:auto;
-}
-.intro-information-h3{
+.intro-information-p-pretitle,.intro-information-p-subtitle{
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 90%;
+    width: 70%;
     height: auto;
+    color:white;
+  
+    margin:0px;
+    margin-bottom:3.5vh;
+}
+
+.intro-information-p-pretitle{
+    font-size: 1.2rem;
+}
+
+.intro-information-p-subtitle{
+    font-size:1.5rem;
 }
 
 .intro-information-h1{
@@ -60,38 +70,104 @@
     align-items: center;
     width: 90%;
     height: auto;
+    color:white;
+    font-size: 3rem;
+    margin:0px;
+    margin-bottom:5vh;
 }
 
 .intro-information-button{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: auto;
     height: auto;
-    background-color: #FF6362;
-    padding:1.5vh 1vw 1.5vh 1vw;
-    border-radius: 5px;
-    color:black;
+    background-color: white;
+    padding:2vh 2vw 2vh 2vw;
+    border-radius: 20px 0px 20px 0px ;
+    color:#FF6362;
     text-decoration: none;
     font-weight: bolder;
+    transition:0.3s all ease;
 }
 
+.intro-information-button:hover{
+    color:#c94141;
+    transform: scale(1.05);
+}
 /* Estilos para dispositivos móviles (ancho máximo de 768px) */
 @media (max-width: 768px){
     /* Estilos específicos para móviles */
-   
+    .intro-content{
+        display: flex;
+        flex-direction:column-reverse;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        margin-top:5vh;
+    }
+
+    .intro-information{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 96%;
+        height:55vh;
+        background-color: #FF6362;
+        padding-left:2%;
+        padding-right: 2%;
+    }
 }
     
 /* Estilos para tablets (ancho máximo de 1024px) */
 @media (max-width: 1024px) and (min-width:769px){
     /* Estilos específicos para tablets */
+    .intro-content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+        height: 100vh;
+    }
 
+    .intro-information{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 45%;
+        height:100%;
+        background-color: #FF6362;
+        padding-left:2%;
+        padding-right: 2%;
+    }
     
 }
 
 /* Estilos para computadoras de escritorio (ancho mínimo de 1025px) */
 @media (min-width: 1025px) {
-    /* Estilos específicos para escritorio */ 
+    /* Estilos específicos para escritorio */
 
+    .intro-content{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+        height: 100vh;
+    }
+
+    .intro-information{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 40%;
+        height:100%;
+        background-color: #FF6362;
+        padding-left:2%;
+        padding-right: 2%;
+    }
 }
 
