--- a/portfolio/src/components/Banner-Carousel-leftscroll/bannerCarousel.css
+++ b/portfolio/src/components/Banner-Carousel-leftscroll/bannerCarousel.css
@@ -21,7 +21,7 @@
     align-items: center;
     min-width: 100%;
     height: auto;
-    max-height: 73vh;
+    max-height: 75vh;
     position:relative;
 }
 
@@ -41,9 +41,16 @@
     color:white;
     text-decoration: none;
     background-color: rgb(0,0,0,0.4);
-    padding: 3px 10px 3px 10px;
+    padding:10px;
+    border-radius: 5px;
     position:absolute;
-    top:70%;
+    top:50%;
+    transition: 0.3s all ease;
+    border:2px solid transparent;
+}
+
+.banner-links:hover{
+    border:2px solid white;
 }
 
 .selectBannerContainer{
@@ -53,7 +60,6 @@
     width: auto;
     height: auto;
     position:absolute;
-    top:90%;
 }
 
 .radiobutton{
@@ -87,3 +93,28 @@
     border-radius: 100%;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
 }
+
+
+@media (max-width: 768px){
+    .selectBannerContainer{
+        top:80%;
+    }
+}
+/* Estilos para tablets (ancho máximo de 1024px) */
+@media (max-width: 1024px) and (min-width:769px){
+    /* Estilos específicos para tablets */
+    .selectBannerContainer{
+        top:85%;
+    }
+    
+}
+
+/* Estilos para computadoras de escritorio (ancho mínimo de 1025px) */
+@media (min-width: 1025px) {
+    /* Estilos específicos para escritorio */
+
+    .selectBannerContainer{
+        top:90%;
+    }
+}
+
