--- a/portfolio/src/pages/project-section/project-section.css
+++ b/portfolio/src/pages/project-section/project-section.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items:space-around;
-    width: 95%;
+    width: 100%;
     height: auto;
     overflow:hidden;
 }
@@ -18,8 +18,9 @@
         width: 100%;
         height: 10vh;
         font-size: 2rem;
-        color:white;
-        border-bottom: 2px solid rgb(255, 81, 0);
+        color:black;
+        border-bottom: 2px solid #FF6362;
+        margin-left:2.5%;
     }
     
 }
@@ -34,8 +35,9 @@
         width: 25%;
         height: 10vh;
         font-size: 2rem;
-        color:white;
-        border-bottom: 2px solid rgb(255, 81, 0);
+        color:black;
+        border-bottom: 2px solid #FF6362;
+        margin-left:2.5%;
     }
     
     
@@ -51,8 +53,9 @@
         width: 20%;
         height: 10vh;
         font-size: 2rem;
-        color:white;
-        border-bottom: 2px solid rgb(255, 81, 0);
+        color:black;
+        border-bottom: 2px solid #FF6362;
+        margin-left:2.5%;
     }
 
 }
