Se ha terminado de desarrollar la seccion de proyectos, solo falta añadir mas fotos

--- a/portfolio/src/pages/project-section/project-section.css
+++ b/portfolio/src/pages/project-section/project-section.css
@@ -6,6 +6,7 @@
     width: 100%;
     height: auto;
     overflow:hidden;
+    z-index: 0;
 }
 
 /* Estilos para dispositivos móviles (ancho máximo de 768px) */
